# Django

./: .env_example  .gitignore  README.md  pyproject.toml
.github/workflows/: django.yml
hw_project/: db.db  pytest.ini  requirements.txt
hw_project/.github/workflows/: tests.yml
hw_project/app_auth/: apps.py  forms.py  urls.py  views.py
hw_project/app_auth/templates/app_auth/: password_reset_confirm.html  password_reset_done.html  register.html
hw_project/core/: settings.py  urls.py
hw_project/core/app_auth/: admin.py  apps.py  forms.py  models.py  signals.py  tasks.py  tests.py  urls.py  views.py
hw_project/core/app_auth/migrations/: 0001_initial.py  0002_alter_profile_user.py
hw_project/core/app_auth/templates/app_auth/: login.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  profile.html
hw_project/core/quotes/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
hw_project/core/quotes/migrations/: 0001_initial.py
hw_project/core/quotes/templates/quotes/: add_author.html  base.html  (+5 more)
hw_project/core/users/: apps.py
hw_project/hw_project/: settings.py  urls.py
hw_project/quotes/: forms.py  models.py  urls.py  views.py
hw_project/quotes/migrations/: 0001_initial.py
hw_project/quotes/static/quotes/: style.css
hw_project/quotes/templates/quotes/: add_author.html  add_quote.html  add_tag.html  author_info.html  base.html  index.html
hw_project/quotes/templatetags/: extract.py
hw_project/users/: urls.py
hw_project/utils/: migration.py
