[tool.poetry]
name = "hw-10-django"
version = "0.1.0"
description = ""
authors = ["Mykyta-Harashchenko <garasenkonikita538@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.7"
pymongo = "^4.8.0"
django-environ = "^0.11.2"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
